--- a/index.html
+++ b/index.html
@@ -5,6 +5,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Cup</title>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/45a12cb216.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body></body>
+  <body>  
+    <header></header>
+    <main>
+      <!-- hero section  start -->
+      <section class="hero">
+       <div class="hero-container">
+        <div class="hero-info">
+          <h1>The Greatest <br>Show on the Earth</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+            accusantium iure dignissimos impedit sequi obcaecati officiis enim
+            voluptatibus architecto voluptate et odio, itaque non quo, suscipit
+            odit quibusdam ut necessitatibus.
+          </p>
+          <a class="live-btn" href="#"
+            >Watch Live
+            <span><i class="fa-solid fa-chevron-right"></i></a>
+        
+       </div>
+        <div class="hero-img">
+          <img src="assets/Banner Image.png" alt="">
+        </div>
+      </div>
+      </section>
+      <!-- hero section end -->
+
+      <!-- middle section start -->
+      <!-- side bar -->
+      <section class="middle-container">
+        <div class="menu">
+          <a href="#">Upcoming Match</a>
+          <a href="#">All Group</a>
+          <a href="#">Blog</a>
+        </div>
+
+        <!-- cards  -->
+        <div class="cards">
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration">10h</div>
+            <div class="comment">25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration">10h</div>
+            <div class="comment">25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration">10h</div>
+            <div class="comment">25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration">10h</div>
+            <div class="comment">25</div>
+          </div>
+         </div>
+        </div>
+      </section>
+      <!-- middle section end  -->
+    </main>
+  </body>
 </html>
