middle section modified

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
           </div>
           <div class="info">
-            <div class="duration">10h</div>
-            <div class="comment">25</div>
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
           </div>
          </div>
          <div class="card">
@@ -76,8 +76,8 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
           </div>
           <div class="info">
-            <div class="duration">10h</div>
-            <div class="comment">25</div>
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
           </div>
          </div>
          <div class="card">
@@ -89,8 +89,8 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
           </div>
           <div class="info">
-            <div class="duration">10h</div>
-            <div class="comment">25</div>
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
           </div>
          </div>
          <div class="card">
@@ -102,10 +102,77 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
           </div>
           <div class="info">
-            <div class="duration">10h</div>
-            <div class="comment">25</div>
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
           </div>
          </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
+          </div>
+         </div>
+         <div class="card">
+          <div class="banner">
+            <img src="assets/Blog Image.png" alt="">
+          </div>
+          <div class="tag">Transfer</div>
+          <div class="title">
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          </div>
+          <div class="info">
+            <div class="duration"><span><i class="fa-regular fa-clock icons"></i></span>10h</div>
+            <div class="comment"> <i class="fa-regular fa-comment-dots icons"></i>25</div>
+          </div>
+         </div>
+        
+        
         </div>
       </section>
       <!-- middle section end  -->
