--- a/index.html
+++ b/index.html
@@ -177,5 +177,12 @@
       </section>
       <!-- middle section end  -->
     </main>
+    <footer>
+      <div class="goal"><h2>  Goal</h2></div>
+      <hr>
+      <div class="footer-menu">
+        <a href="">Contact us</a><a href="">Terms of service</a><a href="">Privacy Policy</a><a href="">Privacy Settings</a><a href="">Global App</a><a href="">Global Live</a>
+      </div>
+    </footer>
   </body>
 </html>
