media query for mobile of hero section

--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
       <section class="hero">
        <div class="hero-container">
         <div class="hero-info">
-          <h1>The Greatest <br>Show on the Earth</h1>
+          <h1>The Greatest Show on the Earth</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-            accusantium iure dignissimos impedit sequi obcaecati officiis enim
-            voluptatibus architecto voluptate et odio, itaque non quo, suscipit
-            odit quibusdam ut necessitatibus.
+            The 2022 FIFA World Cup is scheduled to be the 22nd running of the FIFA World Cup competition, the quadrennial international men's football championship contested by the senior national teams of the member associations of FIFA. It is scheduled to take place in Qatar from 21 November to 18 December 2022. 
           </p>
           <a class="live-btn" href="#"
             >Watch Live
@@ -47,9 +44,9 @@
       <!-- side bar -->
       <section class="middle-container">
         <div class="menu">
-          <a href="#">Upcoming Match</a>
+          <a href="upcoming-match.html">Upcoming Match</a>
           <a href="#">All Group</a>
-          <a href="#">Blog</a>
+          <a class= "active"href="#">Blog</a>
         </div>
 
         <!-- cards  -->
